--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "payment-transfer-module",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "expo": "~54.0.22",
+    "expo-local-authentication": "^17.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
+    "eslint": "^9.39.1",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   },
   "private": true
