--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/fraunces": "^0.4.1",
+    "@expo-google-fonts/poppins": "^0.4.1",
     "expo": "~54.0.22",
+    "expo-font": "~14.0.9",
     "expo-local-authentication": "^17.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
