--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/fraunces": "^0.4.1",
     "@expo-google-fonts/poppins": "^0.4.1",
     "expo": "~54.0.22",
+    "expo-dev-client": "~6.0.17",
     "expo-font": "~14.0.9",
     "expo-local-authentication": "^17.0.7",
     "expo-status-bar": "~3.0.8",
