--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "payment-transfer-module1",
-    "slug": "payment-transfer-module1",
+    "name": "payment-transfer-module",
+    "slug": "payment-transfer-module",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
